# RAG

./: .gitignore  README.md  document_loaders.py  embeddings_deep.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
.claude/: settings.local.json
hybrid_search/: prod_hybrid_search.py
persist_dir/: chroma.sqlite3
