[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.20.1",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "numpy>=2.2.6",
    "openai>=2.43.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "transformers>=5.12.1",
]
